feat: 동선 추천에서 특정 Day만 추천/적용하고 빈 Day도 채워서 추천 (백엔드)
RoutePlanSettingsRequest에 dayId를 추가해 특정 Day만 동선을 미리보기·
적용할 수 있는 API(POST .../route-plan/days/{dayId}/apply)를 추가.
선택한 Day에 배치된 장소가 부족하면 아직 다른 Day에 배치되지 않은
저장 장소로 채워서 추천하도록 하고, 미리보기와 적용(applyReplanDay)
양쪽이 같은 기준(resolveSingleDayCandidatePlaces)을 쓰도록 통일해
"적용할 계획이 올바르지 않다"는 검증 불일치를 제거.